12-Mar-2012 Action value separators are now System.IO.Path.PathSeparator. Semi-colon ';' on Windows, and ':' for *nix platforms.

08-Mar-2012 Many Opus.Core.IModule methods are now implemented explicitly, since they are only used internally, and just clutter the Intellisense in IDEs.

02-Mar-2012 Fixing bug with CommandLineProcessor with Opus.Core.ITools that require more than one path to be added to PATH.

01-Mar-2012 Added C.Win32Resource module in order to compile .rc files.

01-Mar-2012 Improved VSSolutionBuilder's support for generating paths relative to intermediate and output paths or the project file itself.

22-Feb-2012 Improved Opus.Core.BuildManager checks for node failure, so that future nodes do not start when a dependency has failed.

20-Feb-2012 Added GetChildModule function to the Opus.Core.IModuleCollection interface. This allows access to child modules of a collection so that option updates can be performed on them additionally to those inherited from the collection.

19-Feb-2012 Added Gcc linker option 'AllowUndefinedSymbols'. This defaults to true for shared objects and false for applications.

19-Feb-2012 Gcc versions now expose the compiler option "Visibility" properly.

18-Feb-2012 Added a Unix/OSX bash shell script to run the testpackages as a set of unittests.

18-Feb-2012 Added a Windows batch file to run the testpackages as a set of unittests.

18-Feb-2012 If a package definition file has two versions of a package, one with a filter, one without, and the filter matches the current host, fix the problem that the filtered version was not taken.

18-Feb-2012 Reverted 0.30 change; many packages were listed as only being supported on some platforms, which required OPUS_HOST_xxx preprocessor definitions in multiplatform scripts. This made the scripts messy and harder to read and maintain. Since assembly caching now works, the cost of compiling package assemblies is reduced, so removing unused packages on some platforms is less important.
