@@ -7,16 +7,16 @@ namespace Opus.Core
 {
     public sealed class OutputPaths : System.Collections.IEnumerable
     {
-        private System.Collections.Generic.Dictionary<System.Enum, string> fileDictionary;
+        private System.Collections.Generic.SortedDictionary<System.Enum, string> fileDictionary;
 
         public OutputPaths()
         {
-            this.fileDictionary = new System.Collections.Generic.Dictionary<System.Enum, string>();
+            this.fileDictionary = new System.Collections.Generic.SortedDictionary<System.Enum, string>();
         }
 
         public OutputPaths(OutputPaths source)
         {
-            this.fileDictionary = new System.Collections.Generic.Dictionary<System.Enum, string>(source.fileDictionary);
+            this.fileDictionary = new System.Collections.Generic.SortedDictionary<System.Enum, string>(source.fileDictionary);
         }
 
         public string this[System.Enum key]
